# AdventOfCode2025

./: .gitignore  README.md  aoc.cabal  hie.yaml
Day1/: Part1.hs  Part2.hs
Day2/: Part1.hs  Part2.hs
Day3/: Part1.hs
