cabal-version: 3.0
name: aoc
version: 0.1.0.0
build-type: Simple

executable day1-part1
  main-is: Day1/Part1.hs
  build-depends: base
  default-language: Haskell2010

executable day1-part2
  main-is: Day1/Part2.hs
  build-depends: base
  default-language: Haskell2010

executable day2-part1
  main-is: Day2/Part1.hs
  build-depends: base
  default-language: Haskell2010

executable day2-part2
  main-is: Day2/Part2.hs
  build-depends: base
  default-language: Haskell2010

executable day3-part1
  main-is: Day3/Part1.hs
  build-depends: base
  default-language: Haskell2010
